force-app/main/default/objects/ClaimLine__c/ClaimLine__c.object-meta.xml
<CustomObject>
    <description>Represents a line item in a claim record.</description>
    <label>ClaimLine</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClaimLine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>