force-app/main/default/objects/ClaimLine__c/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <inlineHelpText>ID of the claim that this record is related to.</inlineHelpText>
    <label>ClaimId</label>
    <referenceTo>ClaimHeader__c</referenceTo>
    <relationshipLabel>ClaimLine</relationshipLabel>
    <relationshipName>ClaimIdonClaimLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>