force-app/main/default/objects/ClaimLine__c/fields/ClaimStatusId__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatusId__c</fullName>
    <inlineHelpText>ID of the claim status that this record is related to.</inlineHelpText>
    <label>ClaimStatusId</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Claim_Status</valueSetName>
    </valueSet>
</CustomField>