force-app/main/default/objects/ClaimLine__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <inlineHelpText>Service start date for claim line.</inlineHelpText>
    <label>From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>