force-app/main/default/objects/ClaimLine__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <inlineHelpText>Claim line ID number.</inlineHelpText>
    <label>LineNumber</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>