force-app/main/default/objects/ClaimLine__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Location details of the place where service was performed.</inlineHelpText>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>POS_Point_of_Service</valueSetName>
    </valueSet>
</CustomField>