force-app/main/default/objects/ClaimLine__c/fields/LocationCode__c.field-meta.xml
<CustomField>
    <fullName>LocationCode__c</fullName>
    <formula>LEFT( TEXT(Location__c) , 2)</formula>
    <inlineHelpText>Location code of the place where service was performed.</inlineHelpText>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>