force-app/main/default/objects/ClaimLine__c/fields/Modifier__c.field-meta.xml
<CustomField>
    <fullName>Modifier__c</fullName>
    <inlineHelpText>Modifier associated with claim line.</inlineHelpText>
    <label>Modifier</label>
    <length>32</length>
    <type>Text</type>
</CustomField>