force-app/main/default/objects/ClaimLine__c/fields/PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidAmount__c</fullName>
    <inlineHelpText>Amount paid for the service.</inlineHelpText>
    <label>PaidAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>