force-app/main/default/objects/ClaimLine__c/fields/ProcedureCPTHCPCSId__c.field-meta.xml
<CustomField>
    <fullName>ProcedureCPTHCPCSId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Service procedure code based on Current Procedural Terminology (CPT) or Healthcare Common Procedure Coding System (HCPCS).</inlineHelpText>
    <label>ProcedureCPTHCPCSId</label>
    <referenceTo>HealthCare_Procedure__c</referenceTo>
    <relationshipLabel>ClaimLine</relationshipLabel>
    <relationshipName>ClaimLineProcedure</relationshipName>
    <type>Lookup</type>
</CustomField>