force-app/main/default/objects/ClaimLine__c/fields/RenderingProvider__c.field-meta.xml
<CustomField>
    <fullName>RenderingProvider__c</fullName>
    <inlineHelpText>The National Provider Identifier (NPI) of the rendering provider associated with this service.</inlineHelpText>
    <label>RenderingProvider</label>
    <length>32</length>
    <type>Text</type>
</CustomField>