force-app/main/default/objects/ClaimLine__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <inlineHelpText>Number of units of service or drug provided to the patient.</inlineHelpText>
    <label>Unit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>