force-app/main/default/objects/ClaimLine__c/validationRules/ClaimLineNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ClaimLineNameValidation</fullName>
    <active>false</active>
    <errorConditionFormula>!REGEX(Name,&quot;^(\\d{11}(\\-\\d{3})?)?$&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please use the format 20000001234-123</errorMessage>
</ValidationRule>