force-app/main/default/objects/ClaimLine__c/validationRules/From_Date_grt_than_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date_grt_than_To_Date</fullName>
    <active>true</active>
    <errorConditionFormula>To__c &lt; From__c</errorConditionFormula>
    <errorDisplayField>To__c</errorDisplayField>
    <errorMessage>To Date should be greater than From Date</errorMessage>
</ValidationRule>