force-app/main/default/objects/ClaimLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>ProcedureCPTHCPCSId__c</columns>
    <columns>ClaimStatusId__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Unit__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>